--- a/css/main.css
+++ b/css/main.css
@@ -4,11 +4,6 @@
 }
 
 @font-face {
-    src: url("../fonts/MyriadPro-Regular.ttf");
-    font-family: MyriadProRegular;
-}
-
-@font-face {
     src: url("../fonts/Nunito-Bold.ttf");
     font-family: NunitoBold;
 }
@@ -49,7 +44,7 @@ a {
     outline: none;
     border: none;
     font-size: 16px;
-    font-family: NunitoBold, sans-serif;
+    font-family: NunitoSemiBold, sans-serif;
     color: rgb(255, 255, 255);
     cursor: pointer;
     text-align: center;
@@ -67,7 +62,7 @@ li {
 
 #header {
     background: url("../img/header-bg.png") center;
-    height: 114px;
+    height: 104px;
 }
 
 #header #header-container {
@@ -76,6 +71,7 @@ li {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding-top: 6px;
 }
 
 #header #header-container #burger {
@@ -94,41 +90,41 @@ li {
     background: rgb(44, 5, 38);;
     margin: 0 auto;
 }
-#header #header-container #burger span{
+
+#header #header-container #burger span {
     top: 21px;
 }
+
 #header #header-container #burger:after,
-#header #header-container #burger:before{
+#header #header-container #burger:before {
     content: '';
 }
-#header #header-container #burger:after{
+
+#header #header-container #burger:after {
     bottom: 1px;
 }
 
-#header #header-container #burger:before{
+#header #header-container #burger:before {
     top: 11px;
 }
 
 #header #header-container.menu-open span {
-    opacity:0;
+    opacity: 0;
     transition: 0.5s;
 }
+
 #header #header-container.menu-open #burger:before {
     transform: rotate(38deg);
     top: 22px;
     transition: 0.4s;
 }
+
 #header #header-container.menu-open #burger:after {
     transform: rotate(-38deg);
     bottom: 10px;
     transition: 0.4s;
 }
 
-#header #header-container #header-content {
-    width: 690px;
-    display: flex;
-    justify-content: space-between;
-}
 
 #header #header-container #menu {
     display: flex;
@@ -143,6 +139,7 @@ li {
     color: rgb(44, 5, 38);
     border: 1px solid transparent;
     transition: text-shadow .3s;
+    cursor: pointer;
 }
 
 #header #header-container #menu a:hover {
@@ -157,10 +154,11 @@ li {
 
 #header #header-container .logo {
     text-align: center;
+    margin-left: -175px;
 }
 
 .logo a.logo-link {
-    font-size: 55px;
+    font-size: 60px;
     font-family: Marguaritas, sans-serif;
     color: rgb(67, 6, 57);
 }
@@ -191,7 +189,7 @@ li {
 }
 
 #main #main-container #main-content {
-    width: 500px;
+    width: 520px;
     margin-top: 155px;
 }
 
@@ -229,7 +227,7 @@ li {
     font-size: 16px;
     font-family: NunitoSemiBold, sans-serif;
     color: rgb(255, 255, 255);
-    padding: 18px 37px;
+    padding: 14px 35px;
     transition: .15s ease-in-out;
 }
 
@@ -251,12 +249,6 @@ li {
     position: absolute;
     top: 240px;
     left: 30px;
-}
-
-#advantages #advantages-rose .advarightrose1 {
-    position: absolute;
-    top: 127px;
-    right: 403px;
 }
 
 #advantages #advantages-rose .advarightrose2 {
@@ -286,6 +278,14 @@ li {
     align-items: center;
     max-width: 1000px;
     justify-content: space-between;
+    position: relative;
+}
+
+#advantages #advantages-container #advantages-first .advarightrose1 {
+    top: -116px;
+    right: -203px;
+    position: absolute;
+    z-index: -1;
 }
 
 #advantages #advantages-container #advantages-second {
@@ -346,6 +346,7 @@ li {
     z-index: 999;
     position: relative;
     padding-top: 35px;
+    padding-bottom: 45px;
 }
 
 #rituals #rituals-container #rituals-text {
@@ -353,7 +354,7 @@ li {
     font-family: NunitoRegular, sans-serif;
     color: rgb(44, 5, 38);
     line-height: 1.313;
-    width: 550px;
+    width: 560px;
     margin: 30px 0 70px 0;
 }
 
@@ -411,7 +412,7 @@ li {
 }
 
 #rituals-content .ritual .ritual-info .ritual-action .btn {
-    padding: 14px 22px;
+    padding: 9px 21px;
 }
 
 #present {
@@ -496,7 +497,7 @@ li {
     font-size: 16px;
     font-family: NunitoRegular, sans-serif;
     color: rgb(44, 5, 38);
-    width: 505px;
+    width: 561px;
     margin-top: 30px;
     margin-bottom: 46px;
 }
@@ -524,7 +525,7 @@ li {
 
 #masters #masters-container #masters-block .master .master-info {
     width: 251px;
-    height: 70px;
+    height: 76px;
     background: rgb(255, 255, 255);
     opacity: 0.749;
     position: absolute;
@@ -537,6 +538,7 @@ li {
     font-size: 18px;
     font-family: NunitoBold, sans-serif;
     color: rgb(44, 5, 38);
+    padding-bottom: 7px;
 }
 
 #masters #masters-container #masters-block .master .master-info .master-experience {
@@ -615,8 +617,8 @@ li {
 
 #gallery .galleryrose2 {
     position: absolute;
-    bottom: -108px;
-    right: 587px;
+    top: 490px;
+    right: 100px;
     z-index: -1;
 }
 
@@ -639,7 +641,7 @@ li {
     color: rgb(44, 5, 38);
     line-height: 1.313;
     width: 677px;
-    margin: 31px 0 46px 0;
+    margin: 31px 0 34px 0;
 }
 
 #gallery #gallery-slider {
@@ -661,14 +663,15 @@ li {
 }
 
 #gallery .slick-dotted.slick-slider {
-    margin-bottom: 55px;
+    margin-bottom: 40px;
 }
 
 #gallery #gallery-slider .gallery-photo {
     width: 395px;
     height: 296px;
     border-radius: 8px;
-    margin: 0 10px;
+    padding: 12px;
+    outline: none;
 }
 
 #gallery #gallery-slider .gallery-photo img {
@@ -711,10 +714,6 @@ li {
     margin: 0 7px;
 }
 
-/*#gallery #gallery-slider .slick-dots li:nth-child(-n+4) {*/
-/*    display: none;*/
-/*}*/
-
 #gallery .arrows-content .slick-dots li:hover,
 #gallery .arrows-content .slick-dots li.slick-active {
     background-color: rgb(114, 17, 99);
@@ -753,7 +752,9 @@ li {
     margin-top: 250px;
     background: url("../img/questions-bg.png") center;
     height: 100%;
+    background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
 }
 
 #block-question #question-container {
@@ -786,6 +787,7 @@ li {
     margin-top: 20px;
     padding-left: 30px;
     padding-right: 30px;
+    padding-bottom: 0;
 }
 
 #block-question #question-container #question-content .questions-accordion-title {
@@ -797,6 +799,7 @@ li {
     outline: none;
     padding-top: 30px;
     padding-bottom: 30px;
+    position: relative;
 }
 
 #block-question #question-container #question-content .questions-accordion-text,
@@ -808,13 +811,17 @@ li {
     list-style: unset;
 }
 
-#block-question #question-container #question-content .questions-accordion-info .go-link {
+#block-question #question-container #question-content .questions-accordion-info {
     font-size: 14px;
     font-family: NunitoRegular, sans-serif;
     color: rgb(44, 5, 38);
     line-height: 1.5;
     padding-bottom: 30px;
     background-color: rgb(250, 247, 250);
+}
+
+#block-question #question-container #question-content .questions-accordion-info .go-link {
+    padding-bottom: 30px;
 }
 
 #block-question #question-container #question-content .questions-accordion-info .go-link a {
@@ -858,7 +865,24 @@ ul.questions-list {
     margin: 0;
 }
 
-.ui-accordion-header-icon {
+.ui-accordion .ui-accordion-content {
+    overflow: hidden;
+}
+
+.ui-icon.iconClosed {
+    content: '';
+    display: inline-block;
+    position: absolute;
+    top: 38px;
+    right: -10px;
+    background: url("../img/accordion-up.png") 50% 50% no-repeat;
+    width: 22px;
+    height: 12px;
+    margin-right: 10px;
+    vertical-align: middle;
+}
+
+.ui-icon.iconOpen {
     content: '';
     display: inline-block;
     position: absolute;
@@ -869,12 +893,6 @@ ul.questions-list {
     height: 12px;
     margin-right: 10px;
     vertical-align: middle;
-}
-
-.ui-accordion-header-active .ui-accordion-header-icon,
-.ui-state-hover .ui-icon,
-.ui-state-focus .ui-icon {
-    background-image: url("../img/accordion-up.png");
 }
 
 #block-question #question-container #question-content #call-us {
@@ -908,7 +926,7 @@ ul.questions-list {
     border-radius: 50px;
     width: 280px;
     outline: none;
-    padding: 15px 20px;
+    padding: 11px 20px;
     color: rgb(114, 17, 99);
     font-size: 14px;
     font-family: NunitoRegular, sans-serif;
@@ -928,7 +946,7 @@ ul.questions-list {
 
 #block-question #question-container #question-content #call-us #call-us-action .btn {
     width: 282px;
-    padding: 16px;
+    padding: 11px;
     border-radius: 50px;
     margin-top: 15px;
 }
@@ -939,7 +957,7 @@ ul.questions-list {
     right: 76px;
 }
 
-#block-question #question-container #question-content #call-us #call-us-complete{
+#block-question #question-container #question-content #call-us #call-us-complete {
     font-size: 18px;
     font-family: NunitoSemiBold, sans-serif;
     color: rgb(44, 5, 38);
@@ -955,22 +973,29 @@ ul.questions-list {
     position: relative;
 }
 
+#contact-map {
+    position: relative;
+}
+
 #contact #contact-rose .contactroseright1 {
     position: absolute;
     top: -102px;
-    right: 368px;
+    right: 0;
+    z-index: -1;
 }
 
 #contact #contact-rose .contactroseright2 {
     position: absolute;
     top: 204px;
-    right: 220px;
+    right: -145px;
+    z-index: -1;
 }
 
 #contact #contact-rose .contactroseright3 {
     position: absolute;
-    bottom: 10px;
-    right: 253px;
+    bottom: 25px;
+    right: -115px;
+    z-index: -1;
 }
 
 #contact #contact-container {
@@ -1052,9 +1077,23 @@ ul.questions-list {
     width: 220px;
 }
 
-#footer #footer-container #footer-social svg {
+#footer #footer-container #footer-social .vkontakte {
+    width: 36px;
+}
+
+#footer #footer-container #footer-social .facebook,
+#footer #footer-container #footer-social .instagram {
     width: 42px;
     height: 24px;
+}
+
+#footer #footer-container #footer-social .youtube {
+    width: 54px;
+}
+
+#footer #footer-container #footer-social svg {
+    width: 100%;
+    height: 100%;
     fill: #2c0526;
 }
 
@@ -1101,7 +1140,7 @@ ul.questions-list {
     width: 428px;
     padding: 36px 60px 60px 60px;
     position: relative;
-    opacity:1;
+    opacity: 1;
     z-index: 999;
     text-align: center;
 }
@@ -1171,14 +1210,14 @@ ul.questions-list {
     text-align: center;
 }
 
-#popup #popup-container #reserve-complete #reserve-complete-title{
+#popup #popup-container #reserve-complete #reserve-complete-title {
     font-size: 20px;
     font-family: NunitoBold, sans-serif;
     color: rgb(114, 17, 99);
     margin-bottom: 27px;
 }
 
-#popup #popup-container #reserve-complete #reserve-complete-text{
+#popup #popup-container #reserve-complete #reserve-complete-text {
     font-size: 18px;
     font-family: NunitoRegular, sans-serif;
     color: rgb(44, 5, 38);
